backend1-kustomize-stage/backend1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "backend1.cloudbasket.net"
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend1-lb
            port:
              number: 80
